<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/track_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#404040"
        android:text="@string/track_time"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/track_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:text="@string/startTime"
        android:textColor="#000"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/distance_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#404040"
        android:text="@string/distance_label"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:text="@string/startTime"
        android:textColor="#000"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/speed_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#404040"
        android:text="@string/speed_label"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:text="@string/startTime"
        android:textColor="#000"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/calories_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#404040"
        android:text="@string/calories_label"
        android:textColor="#FFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:text="@string/zero"
        android:textColor="#000"
        android:textSize="40sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        
        android:columnCount="1" >

        <Button
            android:id="@+id/startRecord"
            style="android:buttonStyle"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="开始记录"
            android:textColorLink="@android:color/holo_green_light"
            android:textSize="20sp" />

        <Button
            android:id="@+id/endRecord"
            android:layout_width="78dp"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:text="结束记录"
            android:textSize="20sp"
            android:textColorLink="@android:color/holo_green_light" />

        <Button
            android:id="@+id/checkGuiji"
            android:layout_width="78dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:text="查看轨迹"
            android:textSize="20sp"
            android:textColorLink="@android:color/holo_green_light" />

    </GridLayout>
</LinearLayout> 
</ScrollView>